# SpaceBallistics

./: .gitignore  BUILD.sh  CMakeLists.txt  FEATURES.txt  TODO.txt
Docs/: Class-vs-NameSpace.txt
Include/: .MomentsOfInertia.hpp.swp  MomentsOfInertia.h  MomentsOfInertia.hpp  Propellants.hpp  Soyuz_21b.h  Soyuz_21b.hpp  Types.hpp
Include/SpaceBallistics/: AngleUtils.hpp  ConstrElement.h  ConstrElement.hpp  Locations.h  Locations.hpp  Propellants.h  Soyuz21b.h  Soyuz21b.hpp  Soyuz21b_Consts.h  Soyuz21b_Head.h  Soyuz21b_Head_Consts.h  Soyuz21b_Stage3.h  Soyuz21b_Stage3.hpp  Soyuz21b_Stage3_Consts.h  StageDynParams.h  Types.hpp  Utils.hpp
Include/SpaceBallistics/CE/: ConstrElement.hpp  ToricSegms.hpp  TrConeSpherSegm.hpp
Include/SpaceBallistics/CoOrds/: BaryCentricCOS.h  BaryCentricCOSes.h  Bodies.h  BodyCentricCOSes.h  BodyCentricCOSes.hpp  CoOrds.h  EllipsPV.hpp  EllipsoidalPV.hpp  EllipticOrbit.hpp  EmbeddedCOS.h  EqEcl.hpp  GeoCDynEqFixCOS.h  GeoCentricFixedCOS.h  GeoCentricRotatingCOS.h  GeoLocations.h  GeoLocations.hpp  KeplerOrbits.hpp  Locations.h  Locations.hpp  SelenoCentricFixedCOS.h  SelenoCentricRotatingCOS.h  SpherEllipsPVs.hpp  SpherPV.hpp  SphericalPV.hpp  StateVector.h  StateVectors.h  TimeScales-DE440T.hpp  TimeScales.h  TimeScales.hpp  TopoCentricCOS.h  TopoCentricCOSes.h  TwoBodyOrbit.hpp  Vector3D.hpp
Include/SpaceBallistics/LVSC/: LVSC.h  Propellants.h  Soyuz21b.h  Soyuz21b_Consts.h  Soyuz21b_Head.h  Soyuz21b_Stage2.h  Soyuz21b_Stage3.h  Soyuz21b_Stage3.hpp  Soyuz2_LaunchPads.hpp  StageDynParams.h
Include/SpaceBallistics/LVSC/Soyuz-2.1b/: Booster.h  Consts.h  Head.h  LaunchPads.hpp  Soyuz21b.h  Stage1_Booster.h  Stage1_Booster.hpp  Stage2.h  Stage2.hpp  Stage3.h  Stage3.hpp  Stages1-2.hpp  StrapOn.h
Include/SpaceBallistics/ME/: MechElement.h  MechElement.hpp  TanksPressrn.hpp  ToricSegms.h  ToricSegms.hpp  TrConeSpherSegm.h  TrConeSpherSegm.hpp
Include/SpaceBallistics/Maths/: Chebyshev.hpp  Dichotomy.hpp  LinAlgT.hpp  RKF5.hpp  RotationMatrices.hpp
Include/SpaceBallistics/Missions/: Ascent2.h  LVBase.h  MkNOMADParams.hpp  RTLS1.h
Include/SpaceBallistics/PhysEffects/: BodyData.hpp  DE440T-Data.h  DE440T.h  DE440T.hpp  EarthAtmosphereLayers.h  EarthAtmosphereModel.h  EarthAtmosphereModel.hpp  EarthRotationModel.h  EarthRotationModel.hpp  GravityFld.hpp  LVAeroDyn.hpp  PlateAeroDyn.hpp
Include/SpaceBallistics/PhysForces/: BodyData.hpp  DE440T-Data.h  DE440T.h  DE440T.hpp  EarthRotationModel.h  EarthRotationModel.hpp  GravityField.hpp  GravityFld.hpp  LunarGravityPotential.h
OpenFOAM/Scripts/: DiamondCoeffs.awk  MkAllDiamondCases.sh  MkDiamondMesh.sh  RunAllDiamondCases.sh
OpenFOAM/diamondCase/: AU  VarParams
OpenFOAM/diamondCase/0/: T  U  alphat  k  nut  omega  p  phi
OpenFOAM/diamondCase/constant/: thermophysicalProperties  transportProperties  turbulenceProperties
OpenFOAM/diamondCase/constant/polyMesh/: blockMeshDict  boundary  neighbour  owner  points
OpenFOAM/diamondCase/constant/polyMesh/sets/: twoInternalFacesCells
OpenFOAM/diamondCase/system/: blockMeshDict  controlDict  forceCoeffs  fvOptions  fvSchemes  fvSolution
OpenFOAM/diamondCase/templates/: fvSchemes-subsonic  fvSolution-subsonic  k  nut  p-corr  p-subsonic  p-supersonic  p-transonic  phi
SU2/Docs/: CFL.txt  DoubleTop.txt  EulerMesh.txt  FinDiffVolElem.txt  MeshGeners.txt  Performace.txt  RANS.txt  RelatedWork.txt  Remedies.txt  SpeedUpMethods.txt  SteadyStateTrans.txt  Super2HyperSonic.txt  Trans-Books.txt  UnSteadyFlow.txt
SU2/EllipticWing/: Config-Euler-Proto.cfg  Config-Euler.cfg  Config-InV.cfg  Config-RANS-NoWF-Proto.cfg  Config-RANS-Proto.cfg  Config-RANS-WF-Proto.cfg  Config-VisL.cfg  Config-VisT.cfg  Config.cfg  ConfigInc.cfg  Mesh.su2
SU2/EllipticWing/Configs/: Config-Euler-Proto.cfg  Config-NS-Proto.cfg  Config-RANS-WF-Proto.cfg
SU2/Scripts/: BUILD-SU2.sh  EWCoeffs.awk  MkAllEWCases-Euler.sh  MkAllEWCases-RANS.sh  MkAllEWCases.sh  RunAllEWCases.sh
Scripts/: MkAllDiamondCases.sh
Src/: ConstrElement.cpp  MomentsOfInertia.cpp  Soyuz21b.cpp  Soyuz21b_Stage3.cpp  Soyuz_21b.cpp
Src/CoOrds/: TimeScales.cpp
Src/LVSC/Soyuz-2.1b/: Stage1.cpp  Stage2.cpp  Stage3.cpp
Src/Missions/: Ascent2-Integr.cpp  Ascent2-NOMAD.cpp  Ascent2-Opt.cpp  Ascent2-OptGen.cpp  Ascent2-Optim.cpp  Ascent2-Ret1.cpp  Ascent2.cpp  Ascent2.ini  LVBase.hpp  MkNOMADParams.hpp  RTLS1-Integr.cpp  RTLS1-Landing.cpp  RTLS1-NOMAD.cpp  RTLS1-Opt.cpp  RTLS1-OptGen.cpp  RTLS1.ini
Src/PhysEffects/: DE440T-Data.cpp  DE440T.cpp  EarthAtmosphereModel.cpp  EarthRotationModel.cpp  GravityFld-Earth.cpp  GravityFld-Moon.cpp
Src/PhysForces/: DE440T-Data.cpp  DE440T.cpp  EarthRotationModel.cpp  GravityFld-Earth.cpp  GravityFld-Moon.cpp
Src/Soyuz-2.1b/: Stage3.cpp
Tests/: AscentTest.cpp  AzimuthTest.cpp  CETest.cpp  ChebyshevTest.cpp  DE440T_Test.cpp  DE440T_Test0.cpp  DE440T_Test1.cpp  DE440T_Test2.cpp  DE440T_Test3.cpp  ERM_Test.cpp  EarthAtmosphereTest.cpp  LagrangeNormTest.cpp  LinAlgTuplesTest.cpp  LocationsTest.cpp  LunarOrbiterTest.cpp  METest.cpp  ME_Test.cpp  MkSoyuz21bMesh.cpp  MkZhukovskyMesh.cpp  PlateAeroDynTest.cpp  PrecNutTest.cpp  RKF5Test.cpp  RTLSTest.cpp  Soyuz21b_Booster_Test.cpp  Soyuz21b_Stage1_Booster_Test.cpp  Soyuz21b_Stage2_Test.cpp  Soyuz21b_Stage3_Test.cpp  Soyuz21b_StrapOn_Test.cpp  Stage2Test.cpp  Stage3Test.cpp  TAI_Test.cpp  TT_UTC_Test.cpp  Test0.cpp  Test1.cpp  TestUtils.hpp  TransLunarTest.cpp
cmake/: FindNLOPT.cmake
